--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": ",es",
     "cSpell.words": [
         "mapeado",
-        "monitorizan"
+        "monitorizan",
+        "smartphones"
     ]
 }
