formateando practicas arduino

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
-    "cSpell.language": ",es",
-    "cSpell.words": [
-        "mapeado",
-        "monitorizan",
-        "smartphones"
-    ]
+  "cSpell.language": "es,es-ES",
+  "cSpell.words": [
+    "mapeado",
+    "milisegundos",
+    "monitorizan",
+    "protoboard",
+    "smartphones"
+  ]
 }
